added headline and paragraph

--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
  <body>
+  	<h1>This is an example of web site.</h1>
+   	<p>We are checking out how to use html and things like that.</p>
+
 
  </body>
 </html>
