--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
  <body>
   	<h1>This is an example of web site.</h1>
-   	<p>We are checking out how to use html and things like that.</p>
+  <p>We are <b>checking</b> out how to <b>use</b> html <u>and things like that.</u></p>
 
 
  </body>
