--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
  <body>
   	<h1>This is an example of web site.</h1>
   <p>We are <b>checking</b> out how to <b>use</b> html <u>and things like that.</u></p>
-
+<p><a href="https://www.espn.com/">Click here for ESPN</a></p>
 
  </body>
 </html>
