added js and script tags - trying to embed p5

--- a/index.html
+++ b/index.html
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
 <html>
+ <head>
+   <script src="sketch.js"></script> 
+ </head>
  <body>
   	<h1>This is an example of web site.</h1>
   <p>We are <b>checking</b> out how to <b>use</b> html <u>and things like that.</u></p>
 <p><a href="https://www.espn.com/">Click here for ESPN</a></p>
   <p><img src="https://cdn.sweatband.com/head_revolt_mens_indoor_court_shoes_aw20_head_revolt_mens_indoor_court_shoes_aw20_-_back_2000x2000.jpg" alt="A nice shoe" style="width:200px;height:200px;"></p>
 
+  
+  <script type="text/javascript">
+  </script>
  </body>
 </html>
 
